--- a/ui/package.json
+++ b/ui/package.json
@@ -3,13 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-sketch-canvas": "^6.1.0",
+    "redux": "^4.1.2",
+    "redux-localstorage": "^0.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
